--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 		"laravel/framework": "4.2.*",
 		"zizaco/confide": "~4.0@dev",
 		"twitter/bootstrap": "*",
-		"way/generators": "~2.0"
+		"way/generators": "~2.0",
+		"guzzlehttp/guzzle": "~4.0"
 	},
 	"autoload": {
 		"classmap": [
