--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"zizaco/confide": "~4.0@dev",
 		"twitter/bootstrap": "*",
 		"way/generators": "~2.0",
-		"guzzlehttp/guzzle": "~4.0"
+		"guzzlehttp/guzzle": "~4.0",
+		"nesbot/Carbon": "*"
 	},
 	"autoload": {
 		"classmap": [
